// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F0Chip matches the default snapshot 1`] = `
<View
  className="flex items-start"
>
  <View
    className="grow-0 flex-row items-center gap-1 border border-solid py-0.5 border-f0-border pl-2 pr-2 rounded-full"
  >
    <View
      className="min-w-0 flex-row items-center gap-0.5"
    >
      <Text
        className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-medium text-f0-foreground text-left"
        ellipsizeMode="tail"
        numberOfLines={1}
      >
        Label
      </Text>
    </View>
  </View>
</View>
`;

exports[`F0Chip matches the selected avatar closeable snapshot 1`] = `
<View
  className="flex items-start"
>
  <View
    className="grow-0 flex-row items-center gap-1 border border-solid py-0.5 border-f0-border-selected bg-f0-background-selected-secondary pl-0.5 pr-1.5 rounded-sm"
  >
    <View
      className="inline-flex"
    >
      <View
        className="h-fit w-fit"
      >
        <View
          aria-hidden={false}
          aria-label="People avatar"
          className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-5 h-5 rounded-xs bg-[hsl(theme(colors.lilac-50))]"
          data-a11y-color-contrast-ignore={true}
          role="img"
        >
          <Text
            className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-semibold text-f0-foreground-inverse text-left"
            data-a11y-color-contrast-ignore={true}
          >
            P
          </Text>
        </View>
      </View>
    </View>
    <View
      className="min-w-0 flex-row items-center gap-0.5"
    >
      <Text
        className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-medium text-f0-foreground-selected text-left"
        ellipsizeMode="tail"
        numberOfLines={1}
      >
        Label
      </Text>
    </View>
    <View
      accessibilityLabel="Close"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="overflow-hidden -m-1 flex h-6 w-6 items-center justify-center rounded-full [&_svg]:text-f0-icon-secondary"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
          undefined,
        ]
      }
    >
      <View
        className="absolute inset-0"
        pointerEvents="none"
        style={
          [
            {
              "opacity": 0,
            },
            {
              "backgroundColor": "rgba(0, 0, 0, 1)",
            },
          ]
        }
      />
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="100%"
        bbWidth="100%"
        className="shrink-0 w-4 h-4 stroke-sm text-f0-foreground-selected"
        fill="none"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M3.35 12a8.65 8.65 0 1 1 17.3 0 8.65 8.65 0 0 1-17.3 0m6.11-3.46a.65.65 0 0 0-.92.92L11.08 12l-2.54 2.54a.65.65 0 1 0 .92.92L12 12.92l2.54 2.54a.65.65 0 1 0 .92-.92L12.92 12l2.54-2.54a.65.65 0 1 0-.92-.92L12 11.08z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`F0Chip matches the selected leading icon snapshot 1`] = `
<View
  className="flex items-start"
>
  <View
    className="grow-0 flex-row items-center gap-1 border border-solid py-0.5 border-f0-border-selected bg-f0-background-selected-secondary pl-1.5 pr-2 rounded-full"
  >
    <View
      className="min-w-0 flex-row items-center gap-0.5"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="100%"
        bbWidth="100%"
        className="shrink-0 w-4 h-4 stroke-sm text-f0-foreground-selected"
        fill="none"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx={12}
            cy={12}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
              ]
            }
            r={8}
            stroke={
              {
                "type": 2,
              }
            }
          />
          <RNSVGPath
            d="m17.5 6.5-11 11M17.5 17.5l-11-11"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinejoin={1}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-medium text-f0-foreground-selected text-left"
        ellipsizeMode="tail"
        numberOfLines={1}
      >
        Label
      </Text>
    </View>
  </View>
</View>
`;
